<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/icon_wallet"
        android:title="@string/title_wallet" />
    <item
        android:id="@+id/navigation_invite"
        android:icon="@drawable/invite_icon"
        android:title="@string/title_invite" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/title_profile" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/icon_setting"
        android:title="@string/title_setting" />
</menu>