<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="5dp"
            android:visibility="gone"
            android:weightSum="1">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="243.391"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                app:srcCompat="@drawable/black_sim_icon"
                android:contentDescription="@string/app_name" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/black" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/invite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_below="@+id/head">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:text="@string/invite_friends"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:text="@string/invite_your_firends_to_get_cash"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/see_benefit"
            android:visibility="invisible"
            android:textColor="@color/red"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/buble1"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginBottom="-150dp"
                android:background="@drawable/msgbuble"
                android:gravity="center"
                android:text="@string/rs_2000"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_toEndOf="@+id/buble1"
                android:background="@drawable/msgbuble"
                android:gravity="center"
                android:text="@string/rs_2000"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <ImageView
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:src="@drawable/balon"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lets_get_social"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invite_your_friends_string"
            android:textColor="@color/off_black"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_widget"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/referral_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:padding="5dp"
                tools:text="https://Invite.cashfree.idxldj,39"
                android:textColor="@color/design_default_color_primary"
                android:textStyle="bold" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/referral_code"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <ImageView
                android:id="@+id/share_fb"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/fbicon"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:id="@+id/share_whatsapp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/whatsappicon"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:visibility="gone"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/rounded_instagram"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:id="@+id/share_line"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/rounded_message"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:id="@+id/share_general"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/uploadicon"
                android:contentDescription="@string/app_name" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>