<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.VideosFragment">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        app:elevation="2dp"
        android:padding="10dp">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:paddingTop="3dp"
            android:padding="5dp"
            app:srcCompat="@drawable/icon_back"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:text="@string/watch_video"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_bar">
        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube_player_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:showFullScreenButton="false"
            app:showSeekBar="false"
            app:showYouTubeButton="false" />

        <TextView
            android:id="@+id/rewards_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/youtube_player_view"
            android:layout_centerHorizontal="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="3 rewards left"
            android:gravity="center"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"/>


        <TextView
            android:id="@+id/reward_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/youtube_player_view"
            android:layout_marginTop="10dp"
            tools:text="Reward amount: Rs. 100"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>


        <LinearLayout
            android:id="@+id/duration_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reward_tv"
            android:padding="5dp"
            android:weightSum="2">
            <TextView
                android:id="@+id/elapsed_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Duration watched"
                android:gravity="end"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"/>

            <TextView
                android:id="@+id/total_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Total duration"
                android:layout_marginStart="3dp"
                android:padding="5dp"
                android:gravity="start"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/duration_ll"
            android:padding="10dp"
            android:weightSum="2"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/prev_video_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                style="@style/NormalButton"
                android:textColor="@color/white"
                android:background="@drawable/gradiant_blutype"
                android:layout_marginEnd="5dp"
                android:text="Previous video"/>

            <Button
                android:id="@+id/next_video_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/NormalButton"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:textColor="@color/white"
                android:background="@drawable/gradiant_blutype"
                android:text="@string/next_video"/>
        </LinearLayout>


         </RelativeLayout>
    <ImageView
        android:id="@+id/no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/nodata_found"
        android:contentDescription="@string/app_name"
        android:visibility="gone"/>
    <ImageView
        android:id="@+id/no_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/no_internet"
        android:contentDescription="@string/app_name"
        android:visibility="gone"/>
    <LinearLayout
        android:id="@+id/dots_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center">
        <com.eyalbira.loadingdots.LoadingDots
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:LoadingDots_auto_play="true"
            app:LoadingDots_dots_color="@android:color/holo_blue_light"
            app:LoadingDots_dots_count="4"
            app:LoadingDots_dots_size="20dp"
            app:LoadingDots_dots_space="1dp"
            app:LoadingDots_loop_duration="800"
            app:LoadingDots_loop_start_delay="100"
            app:LoadingDots_jump_duration="200"
            app:LoadingDots_jump_height="4dp"/>
    </LinearLayout>
</RelativeLayout>